@@ -11,6 +11,7 @@
  * Released under GNU GPL, read the file 'COPYING' for more information
  */
 
+#include <config.h>
 #include <string.h>
 #include <gtk/gtksignal.h>
 #include <gtk/gtkwindow.h>
