@@ -13,6 +13,7 @@
  * Released under GNU GPL
  */
 
+#include <config.h>
 #include <math.h>
 #include <string.h>
 #include <glib.h>
